Login design done, Setup in progress

--- a/mnk-game/src/App.css
+++ b/mnk-game/src/App.css
@@ -4,5 +4,26 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: radial-gradient(circle, rgba(197, 191, 141, 1) 37%, rgba(185, 116, 52, 1) 100%);
 }
+
+body {
+  background-image: url("images/background2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+/* 
+gold gradient:
+  linear-gradient(90deg, #844414 0%, #c7801d 20%, #ffe233 50%, #c7801d 80%, #844414 100%)
+
+bronze gradient:
+  linear-gradient(90deg, #844414 0%, #fcd5be 25%, #cf7d52 50%, #fcd5be 75%, #844414 100%)
+
+less colorful bronze:
+  linear-gradient(90deg, #89674d 0%, #fcd5be 25%, #ce9374 50%, #fcd5be 75%, #89674d 100%)
+ */
