--- a/mnk-game/src/components/Login.scss
+++ b/mnk-game/src/components/Login.scss
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   height: auto;
+  min-height: 20vh;
   background-image: url("../images/sepia.jpg");
   background-size: cover;
   background-position: center;
@@ -21,7 +22,36 @@
   position: relative;
   z-index: 0;
   min-width: 600px;
-  height: auto;
+
+
+  .nail {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: linear-gradient(160deg, rgba(172, 176, 209, 1) 0%, rgba(54, 75, 100, 1) 88%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+  }
+
+  .nail-top-left {
+    top: 5px;
+    left: 5px;
+  }
+
+  .nail-top-right {
+    top: 5px;
+    right: 5px;
+  }
+
+  .nail-bottom-left {
+    bottom: 5px;
+    left: 5px;
+  }
+
+  .nail-bottom-right {
+    bottom: 5px;
+    right: 5px;
+  }
 
   .card-content {
     position: relative;
