--- a/mnk-game/src/components/Setup.scss
+++ b/mnk-game/src/components/Setup.scss
@@ -8,12 +8,25 @@
   src: url("../fonts/fredericka.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Yellowtail";
+  src: url("../fonts/yellowtail.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Special Elite";
+  src: url("../fonts/SpecialElite.ttf") format("truetype");
+}
+
+
+
 .setup-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: auto;
+  max-height: 95vh;
   max-width: 600px;
   min-width: 400px;
   position: relative;
@@ -21,7 +34,36 @@
   background-size: cover;
   color: #3f201a;
 
-  .user-card-content {
+  .nail {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: linear-gradient(160deg, rgba(172, 176, 209, 1) 0%, rgba(54, 75, 100, 1) 88%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+  }
+
+  .nail-top-left {
+    top: 5px;
+    left: 5px;
+  }
+
+  .nail-top-right {
+    top: 5px;
+    right: 5px;
+  }
+
+  .nail-bottom-left {
+    bottom: 5px;
+    left: 5px;
+  }
+
+  .nail-bottom-right {
+    bottom: 5px;
+    right: 5px;
+  }
+
+  .setup-card-header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,24 +71,14 @@
     height: auto;
     width: 100%;
     position: relative;
-    min-height: 250px;
 
-    .setup-text,
-    .howdy-text {
+    .setup-text {
       font-family: "Reward Font" !important;
       font-size: 32px;
       text-align: center;
       z-index: 3 !important;
-    }
-
-    .setup-text {
       position: absolute;
       top: 15px;
-    }
-
-    .howdy-text {
-      position: absolute;
-      top: 70%;
     }
 
     .red-ribbon {
@@ -59,33 +91,201 @@
       z-index: 0;
     }
 
-
-    .google-avatar {
-      height: 80px;
-      width: auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-    }
-
-    .wanted-icon {
-      height: 150px;
-      width: 150px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1;
-    }
-
-    .sign-out-button {
-      position: absolute;
-      top: 100%;
-    }
   }
 
+  .user-card-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    height: auto;
+    width: 100%;
+    position: relative;
+    height: 20vh;
+    min-height: 200px;
+    margin-top: 20px;
+
+
+    .user-picture {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-left: 40px;
+      position: relative;
+      margin-bottom: 1vh;
+
+      .google-avatar {
+        position: absolute;
+        top: 25%;
+        min-height: 7vh;
+        width: auto;
+        z-index: 2;
+      }
+
+      .wanted-icon {
+        min-height: 12vh;
+        width: 150px;
+        z-index: 1;
+      }
+    }
+
+    .user-admin {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      flex: 1;
+
+      .email-text {
+        display: flex;
+        font-family: "Fredericka the Great" !important;
+        font-weight: bold !important;
+        font-size: 20px;
+        text-align: center;
+        z-index: 3 !important;
+        margin: 10px;
+      }
+
+      .sign-out-button {
+        display: flex;
+        margin: 10px;
+      }
+
+
+    }
+
+    .howdy-text {
+      font-family: "Reward Font" !important;
+      font-size: 32px;
+      text-align: center;
+      z-index: 3 !important;
+      position: absolute;
+      top: 80%;
+    }
+
+  }
+
+  .decorative-line-one {
+    width: 80%;
+  }
+
+  .setup-card-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    height: auto;
+    width: 100%;
+    position: relative;
+    min-height: 20vh;
+
+    .board-size-label {
+      font-family: "Fredericka the Great";
+      text-align: center;
+      font-weight: bold;
+      font-size: 25px;
+      margin-bottom: 8px;
+    }
+
+    .board-size {
+      width: 70% !important;
+    }
+
+    .MuiSlider-root {
+      width: 300px;
+
+      color: rgb(126, 78, 33);
+
+      .MuiSlider-thumb {
+        background-color: rgb(103, 106, 124)
+      }
+
+      .MuiSlider-mark,
+      .MuiSlider-markLabel {
+        background-color: rgba(172, 176, 209, 1)
+      }
+
+      .MuiSlider-markLabel {
+        color: rgba(172, 176, 209, 1)
+      }
+    }
+
+
+    .MuiTextField-root {
+      display: block;
+      margin-bottom: 16px;
+    }
+
+    .player-settings {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: nowrap;
+      width: 100%;
+      position: relative;
+      height: 25vh;
+      min-height: 150px;
+
+      .player-one-settings,
+      .player-two-settings {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      .player-1-token,
+      .player-2-token {
+        font-family: "Fredericka the Great";
+        text-align: center;
+        font-weight: bold;
+        font-size: 20px;
+        margin-bottom: 8px;
+
+      }
+
+      .player-one-name,
+      .player-two-name {
+        .MuiOutlinedInput-root {
+          fieldset {
+            border-color: rgb(103, 106, 124);
+            border-style: dashed;
+          }
+
+          &:hover fieldset {
+            border-color: rgb(103, 106, 124)
+          }
+
+          &.Mui-focused fieldset {
+            border-color: #3d312c
+          }
+        }
+
+        .Mui-focused {
+          color: #3f3636
+        }
+
+        .MuiInputLabel-root {
+          font-family: "Fredericka the Great";
+          font-weight: bold;
+        }
+
+        .MuiInputBase-input {
+          font-family: 'Special Elite';
+        }
+
+      }
+
+      .player-typography {
+        font-family: "Fredericka the Great";
+        font-weight: bold;
+      }
+    }
+
+
+  }
 }
 
 button {
@@ -103,56 +303,15 @@ button {
   &:hover {
     background-color: #2e1a10 !important;
   }
-}
 
-.MuiSlider-root {
-  width: 300px;
-  margin-bottom: 16px;
-  color: #ce9374;
-
-  .MuiSlider-thumb {
-    background-color: linear-gradient(90deg,
-        #89674d 0%,
-        #fcd5be 25%,
-        #ce9374 50%,
-        #fcd5be 75%,
-        #89674d 100%);
-  }
-
-  .MuiSlider-mark,
-  .MuiSlider-markLabel {
-    background-color: #1976d2;
-  }
-
-  .MuiSlider-markLabel {
-    color: linear-gradient(90deg,
-        #89674d 0%,
-        #fcd5be 25%,
-        #ce9374 50%,
-        #fcd5be 75%,
-        #89674d 100%);
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    transition: opacity 0.3s ease, cursor 0.3s ease;
   }
 }
 
-.MuiTextField-root {
-  display: block;
-  margin-bottom: 16px;
-}
-
-#player-1-token,
-#player-2-token {
-  font-family: "Fredericka the Great";
-  text-align: center;
-  font-weight: bold;
-  font-size: 20px;
-  margin-bottom: 8px;
-}
-
-.board-size-label {
-  color: linear-gradient(90deg,
-      #89674d 0%,
-      #fcd5be 25%,
-      #ce9374 50%,
-      #fcd5be 75%,
-      #89674d 100%);
+.swiper-button-prev,
+.swiper-button-next {
+  color: rgb(103, 106, 124)
 }
