--- a/mnk-game/src/components/Login.css
+++ b/mnk-game/src/components/Login.css
@@ -12,14 +12,17 @@
   align-items: center;
   justify-content: center;
   height: auto;
-  min-height: 20vh;
+  min-height: 500px;
+  max-height: 80vh;
+  width: auto;
+  min-width: 400px;
+  max-width: 60vw;
   background-image: url("../images/sepia.jpg");
   background-size: cover;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 0;
-  min-width: 600px;
 }
 .login-card .nail {
   position: absolute;
@@ -46,42 +49,39 @@
   right: 5px;
 }
 .login-card .card-content {
-  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 90%;
-  top: 3%;
-  margin-bottom: 20px !important;
+  margin: 2% 0 0% 0;
 }
 .login-card .card-content .welcome-text {
   font-family: "Reward Font";
-  width: 100%;
+  font-size: 3vw;
+  width: 70%;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #2c1814;
+  padding: 6% 0 0 0;
 }
-.login-card .tic-tac-toe-icon {
+.login-card .card-content .tic-tac-toe-icon {
+  width: 3vw;
+  height: 3vw;
+  z-index: 1;
+  padding-top: 6%;
+}
+.login-card .card-content .red-ribbon {
   height: auto;
+  width: 90%;
   position: absolute;
-  top: 52.5%;
-  transform: translateY(-50%);
-  z-index: 0;
-}
-.login-card .tic-tac-toe-icon.left {
-  left: 10%;
-  width: 30px;
-}
-.login-card .tic-tac-toe-icon.right {
-  right: 10%;
-  width: 30px;
-}
-.login-card .red-ribbon {
-  height: auto;
-  width: 100%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   z-index: -1;
+  margin-top: 5%;
+}
+.login-card .saloon-door {
+  width: 30%;
 }
 .login-card .info-card {
   display: flex;
@@ -89,29 +89,24 @@
   align-items: center;
   justify-content: center;
   height: auto;
-  width: 80%;
-  position: relative;
-  bottom: 10px;
-  z-index: 0;
-  border: 10;
+  width: auto;
 }
 .login-card .info-card .info-text {
   font-family: "Fredericka the Great";
   text-align: center;
   font-weight: bold;
-  font-size: 20px !important;
-  margin-bottom: 10px !important;
+  font-size: 2vw;
 }
 .login-card .google-button {
   font-family: "Fredericka the Great" !important;
   font-weight: bold;
-  font-size: 20px !important;
+  font-size: 2vw !important;
   color: #090808 !important;
   background-image: url("../images/wood-board.png");
   background-size: cover;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 8px 16px;
+  margin: 2% 0 6% 0 !important;
   transition: background-color 0.3s ease !important;
 }
 .login-card .google-button:hover {
